make selection box behind everything to stop it interfeering wiht click events except if its active

--- a/css/style.css
+++ b/css/style.css
@@ -217,4 +217,5 @@ body:before {
 	position:absolute;
 	left:-2;
 	top:-2;
+	z-index: -1;
 }
